# trading-game-llm

./: .gitignore  README.md  pyproject.toml  trading-game-design.md
agents/: base.py  bots.py  llm_client.py  llm_worker.py
engine/: auction.py  engine.py  events.py  rules.py  state.py
orchestrator/: runner.py
protocol/: protocol.py
readers/: benchmark.py  metrics.py  oracle.py  research.py  spectator.py
store/: log.py
tests/: test_auction.py  test_determinism.py  test_isolation.py  test_llm_worker.py  test_scoring.py  test_settlement.py  test_spectator.py
